fixed nav links, fixed <main> overlap into <footer> via media queries for xs/sm breakpoints

--- a/style.css
+++ b/style.css
@@ -52,7 +52,27 @@
 }
 
 /*-- main content --*/
-
+@media (max-width: 500px) {
+    .footer-container {
+      margin-top: 100px;
+      padding-top: 150px;
+    }
+}
+@media (min-width: 501px) {
+  .footer-container {
+    margin-top: 100px;
+    padding-top: 100px;
+  }
+}
+@media (min-width: 992px) {
+  .colorful img, .intro img {
+    align-items: center;
+  }
+  .footer-container {
+    margin-top: 0px;
+    padding-top: 0px;
+  }
+}
 main h1 {
   text-align: center;
   font-weight: bold;
@@ -116,11 +136,6 @@ div .intro {
   text-align: center;
   font-weight: 200;
   margin-bottom: 4rem;
-}
-@media (min-width: 992px) {
-  .colorful img, .intro img {
-    align-items: center;
-  }
 }
 
 /*-- footer --*/
